--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
   <head>
     <title>GitHub Pages Test</title>
     <style>
-body
+*
 {
+    box-sizing: border-box;
+    margin: auto:
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 100pt;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: black;
     color: red;
-    text-align: center;
+    border: none;
 }
     </style>
   </head>
   <body>
-    <h1>GitHub Pages Test</h1>
+    <button>GitHub Pages Test</button>
   </body>
 </html>
